# generics-comp-lesson

./: .gitignore
cpp/: CMakeLists.txt  box.cpp  counter.cpp  duck_typing.cpp  factorial.cpp  specialization.cpp
cpp/factory/: ConsolePrinter.cpp  ConsolePrinter.h  FactoryImplementation.h  FactoryRegistry.h  FilePrinter.cpp  FilePrinter.h  GenericFactory.h  Printer.h  PrinterFactory.h  main.cpp
cs/GenericsComparison/: GenericsComparison.sln
cs/GenericsComparison/Complex/: Constraint.cil  ConstraintGeneric.cs  CustomNode.cs  Node.cs  Nodes.cil
cs/GenericsComparison/Factory/: ConsolePrinter.cs  Factory.cs  FilePrinter.cs  Printer.cs  PrinterFactory.cs  Program.cs
cs/GenericsComparison/Simple/: Box.cil  Box.cs  GenericStatic.cs  Simple.csproj
cs/GenericsComparison/Statics/: Counter.cs
java/src/: Box.java  Compiled_Node.java  Main.java  Node.java  Specialization.java  StaticGeneric.java
java/src/compiled/erasure/: ConstraintGeneric.java  CustomNode.java  Node.java
java/src/compiled/simple/: Box.java
java/src/compiled/wildcard/: WildcardGeneric.java
java/src/examples/erasure/: ConstraintGeneric.java  CustomNode.java  Main.java  Node.java
java/src/examples/factory/: ConsolePrinter.java  Factory.java  FileContent.java  FilePrinter.java  Main.java  OstreamPrinter.java  Printer.java  PrinterFactory.java
java/src/examples/illegal/: Specialization.java  StaticGeneric.java
java/src/examples/simple/: Box.java
java/src/examples/statics/: Counter.java  Main.java  TypeAwareCounter.java
java/src/examples/wildcard/: WildcardGeneric.java
